# 2Dgameengine

./: .gitignore  CMakeLists.txt  README.md  build.sh  compile_commands.json
.cache/clangd/index/: Components.cpp.A258DBE8622E0C99.idx  Components.h.9239716B1D593A8A.idx  UIElements.cpp.EF62C74F5E2EA328.idx  UIElements.h.1180E0B2050450A1.idx  colors.h.A0112D7BBA491066.idx  entity.cpp.0D0946844E67176C.idx  entity.h.7F1325C5B00FAE98.idx  error.cpp.8A7A8E9C538615EB.idx  error.h.D64EFA5664068B39.idx  event.cpp.B3A80097F043592F.idx  events.h.FBE309467473BFDD.idx  game.cpp.B8FE0B3B093A50A4.idx  game.h.93E5ECE7DBD92CA6.idx  main.cpp.7FF060A40810158D.idx
include/: Components.h  UIElements.h  colors.h  entity.h  error.h  events.h  game.h
src/: Components.cpp  UIElements.cpp  entity.cpp  error.cpp  event.cpp  game.cpp  main.cpp
